# fentpic

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE_REPORT.md  PRIVACY.md  README.md  TERMS.md  app.py  check_licenses.py  package.json  pyproject.toml  requirements.txt  schema.sql
.storybook/: main.js  preview.js
docs/: api.rst  conf.py  index.rst  installation.rst
docs/source/: api.rst  conf.py  development.rst  installation.rst
static/: sw.js
static/css/: styles.css
stories/: ImageCard.stories.js  UploadCard.stories.js
templates/: base.html  index.html  login.html  privacy.html  profile.html  terms.html
